Adding floret from space battle event

--- a/mod/Domestication/localisation_synced/factions_domestication.yml
+++ b/mod/Domestication/localisation_synced/factions_domestication.yml
@@ -1,2 +1,2 @@
 ﻿l_default:
- format.pop_faction.domesticator_faction: "<xenoist_names_1> <domestication_names> <xenoist_names_3>"
+ format.pop_faction.domesticator_faction: "<xenoist_names_1> <domesticator_names> <xenoist_names_3>"
