--- a/mod/Domestication/localisation_synced/prescripted_countries_domestication.yml
+++ b/mod/Domestication/localisation_synced/prescripted_countries_domestication.yml
@@ -1,4 +1,4 @@
-l_default:
+﻿l_default:
  PRESCRIPTED_ship_prefix_humans3: "TCNS"
  PRESCRIPTED_species_name_humans3: "Terrans"
  PRESCRIPTED_species_plural_humans3: "Terrans"
